tests/markups/fail-23.expected
ERROR: Value of 'background' attribute on <span> tag on line 1 could not be parsed; should be a color specification, not 'shubidoo'